# simple-python-monorepo

./: README.md
libraries/library-example/: pyproject.toml
libraries/library-example/library_example/: utils.py
libraries/library-example/library_example/numbers/: base.py  numpy_utils.py
projects/project-1/: .gitignore  pyproject.toml
projects/project-1/project_1/: main.py
projects/project-1/tests/: test_main.py
projects/project-2/: README.md  pyproject.toml
