[tool.poetry]
name = "library-example"
version = "0.1.0"
description = ""
authors = ["Alexandre Candeias"]
readme = "README.md"
packages = [{include = "library_example"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
